# hydroflow

./: .dockerignore  .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  book.toml  build_docs.bash  clippy.toml  cluster0.perf  cluster1.perf  cluster2.perf  cluster3.perf  cluster4.perf  cluster5.perf  cluster6.perf  cluster7.perf  hydroflow_internalmacro.d  index.md  leader.perf  leader.perf.data  precheck.bash  rust-toolchain.toml  rustfmt.toml
babyflow/: Cargo.toml
babyflow/benches/: arithmetic.rs  fork_join.rs  identity.rs  upcase.rs
babyflow/src/: lib.rs  main.rs
babyflow/src/babyflow/: mod.rs  query.rs
benches/: Cargo.toml  README.md  build.rs
benches/benches/: .gitignore  arithmetic.rs  fan_in.rs  fan_out.rs  fork_join.rs  futures.rs  identity.rs  join.rs  mapjoinperf.rs  micro_ops.rs  reachability.rs  reachability_edges.txt  reachability_reachable.txt  symmetric_hash_join.rs  upcase.rs  words_alpha.txt  words_diamond.rs  zip.rs
chat/: Cargo.toml
chat/src/: client.rs  main.rs  protocol.rs  server.rs
covid_tracing_dist/: Cargo.toml
covid_tracing_dist/src/: database.rs  main.rs  tracker.rs
datalog_compiler/: Cargo.toml  build.rs
datalog_compiler/src/: grammar.rs  lib.rs
dfir_datalog/: CHANGELOG.md  Cargo.toml
dfir_datalog/src/: lib.rs
dfir_datalog_core/: CHANGELOG.md  Cargo.toml
dfir_datalog_core/src/: grammar.rs  join_plan.rs  lib.rs  util.rs
dfir_macro/: CHANGELOG.md  Cargo.toml  build.rs
dfir_macro/src/: lib.rs
flow_macro/: Cargo.toml
flow_macro/src/: lib.rs
hydro_cli/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  echo.hydro.py  pyproject.toml  test.hydro.py
hydro_cli/examples/: dedalus_python_client.hydro.py  simple_dedalus.hydro.py
hydro_cli/hydro/: __init__.py  _core.pyi  async_wrapper.py  cli.py
hydro_cli/python_tests/: basic.py  demux.py  mux.py  tagged.py
hydro_cli/src/: async_wrapper.py  cli.rs  core.rs  lib.rs  main.rs  python_interface.rs
hydro_cli_examples/: 2pc.hydro.py  Cargo.toml  auto_2pc.hydro.py  auto_paxos.hydro.py  auto_vote.hydro.py  dedalus_python_client.hydro.py  dedalus_python_receiver.hydro.py  echo.hydro.py  hydro_python_sender.hydro.py  main.tf.json  mux_python_sender.hydro.py  paxos.hydro.py  pn_counter.hydro.py  pn_counter_latency.hydro.py  simple_dedalus.hydro.py  spin.hydro.py  temp.json  tick.hydro.py  toplotree.hydro.py  topolotree.hydro.py  topolotree_latency.hydro.py  vote.hydro.py  ws_chat_server.py
hydro_cli_maelstrom/: Cargo.toml
hydro_cli_maelstrom/src/: cli_refs.rs  config.rs  hydro_interact.rs  maelstrom.rs  main.rs  ports.rs  utils.rs
hydro_lang/: CHANGELOG.md  Cargo.toml
hydro_lang/src/: boundedness.rs  deploy_runtime.rs  ir.rs  lib.rs  optional.rs  runtime_context.rs  singleton.rs  staging_util.rs  stream.rs
hydro_std/: CHANGELOG.md  Cargo.toml
hydro_std/src/: lib.rs  quorum.rs  request_response.rs
hydro_test/: Cargo.toml
hydro_test/examples/: compute_pi.rs  first_ten_distributed.rs  map_reduce.rs  paxos.rs  perf_compute_pi.rs  simple_cluster.rs  two_pc.rs
hydro_test/src/: lib.rs
hydro_test_local/: Cargo.toml
hydro_test_local/src/: lib.rs
hydro_test_local_macro/: Cargo.toml  build.rs
hydroflow/: CHANGELOG.md  Cargo.toml  README.md
hydroflow/benches/: benches.rs
hydroflow/example_utils/: web2a
hydroflow/examples/: example_1_simplest.rs  example_2_simple_1.rs  example_2_simple_2.rs  example_3_stream.rs  example_4_neighbors.rs  example_5_reachability.rs  example_6_unreachability.rs  example_naturals.rs  example_surface_flows_1_basic.rs  example_surface_flows_2_varname.rs  example_surface_flows_3_ports.rs  example_surface_flows_4_context.rs  example_syntax_empty.rs  example_syntax_hello_world.rs  example_syntax_input.rs  example_syntax_output.rs
hydroflow/src/: collections.rs  declarative_macro.rs  handoff.rs  lib.rs  query.rs
hydroflow/tests/: book_code.rs  datalog_compile_fail.rs  datalog_frontend.rs  datalog_minimal.rs  group_by_infer.rs  groupby.rs  mux_demux.rs  networked.rs  scheduled_teeing_handoff.rs  scheduled_test.rs  surface_async.rs  surface_batch.rs  surface_book.rs  surface_codegen.rs  surface_codegen.rs.wip  surface_compile_fail.rs  surface_context.rs  surface_cross_singleton.rs  surface_debug.rs  surface_demux_enum.rs  surface_demux_partition.rs  surface_difference.rs  surface_echo.rs  surface_examples.rs  surface_flow_props.rs  surface_fold.rs  surface_fold_keyed.rs  surface_forwardref.rs  surface_group_by.rs  surface_join.rs  surface_join_fused.rs  surface_keyed_fold.rs  surface_lattice_batch.rs  surface_lattice_bimorphism.rs  surface_lattice_bimorphism_persist_insertion.rs  surface_lattice_fold.rs  surface_lattice_generalized_hash_trie.rs  surface_lattice_join.rs  surface_lattice_merge.rs  surface_lattice_reduce.rs  (+20 more)
hydroflow_cli_integration/: CHANGELOG.md  Cargo.toml
hydroflow_cli_integration/src/: lib.rs
hydroflow_datalog/: CHANGELOG.md  Cargo.toml
hydroflow_datalog/src/: grammar.rs  join_plan.rs  lib.rs  util.rs
hydroflow_datalog_core/: CHANGELOG.md  Cargo.toml  build.rs
hydroflow_datalog_core/src/: grammar.rs  join_plan.rs  lib.rs
hydroflow_internalmacro/: CHANGELOG.md  Cargo.toml
hydroflow_internalmacro/src/: lib.rs
hydroflow_lang/: CHANGELOG.md  Cargo.toml  build.rs
hydroflow_lang/src/: diagnostic.rs  lib.rs  parse.rs  pretty_span.rs  process_singletons.rs  union_find.rs
hydroflow_macro/: CHANGELOG.md  Cargo.toml  build.rs
hydroflow_macro/src/: lib.rs  parse.rs  parse.rs.old  union_find.rs
hydroflow_plus/: CHANGELOG.md  Cargo.toml  build.rs
hydroflow_plus/src/: builder.rs  cycle.rs  ir.rs  lib.rs  location.rs  node.rs  optional.rs  persist_pullup.rs  persist_pushdown.rs  profiler.rs  properties.rs  quoting.rs  runtime_context.rs  singleton.rs  staging_util.rs  stream.rs
hydroflow_plus_cli_integration/: Cargo.toml
hydroflow_plus_cli_integration/src/: deploy.rs  lib.rs  runtime.rs
hydroflow_plus_kvs/: Cargo.toml  build.rs
hydroflow_plus_kvs/src/: lib.rs
hydroflow_plus_kvs_macro/: Cargo.toml  build.rs
hydroflow_plus_kvs_macro/src/: lib.rs
(+15519 files in other folders)
