[package]
name = "babyflow"
version = "0.1.0"
authors = ["Justin Jaffray <justin.jaffray@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
datadriven = "0.6.0"

[dev-dependencies]
criterion = { version = "0.3", features = [ "async_tokio" ] }
spinach = { git = "https://github.com/MingweiSamuel/spinach", rev="622fdb8" }