[package]
name = "benches"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = [ "async_tokio" ] }
seq-macro = "0.2"
tokio = { version = "1.0", features = [ "rt-multi-thread" ] }
babyflow = { path = "../babyflow" }
spinachflow = { path = "../spinachflow" }
timely = "*"

[[bench]]
name = "fan_in"
harness = false