[package]
name = "benches"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = [ "async_tokio", "html_reports" ] }
hydroflow = { path = "../hydroflow" }
lazy_static = "1.4.0"
# pprof = { version = "0.6", features = [ "flamegraph", "criterion" ] }
rand = "0.8.4"
seq-macro = "0.2"
timely = "*"
differential-dataflow = "*"
tokio = { version = "1.0", features = [ "rt-multi-thread" ] }
static_assertions = "1.1.0"

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "fan_in"
harness = false

[[bench]]
name = "fan_out"
harness = false

[[bench]]
name = "fork_join"
harness = false

[[bench]]
name = "identity"
harness = false

[[bench]]
name = "upcase"
harness = false

[[bench]]
name = "join"
harness = false

[[bench]]
name = "reachability"
harness = false

[[bench]]
name = "micro_ops"
harness = false
