[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.5"
hydroflow = { path = "../hydroflow" }
futures = { version = "0.3" }
byteorder = "1.4.3"
bytes = "1.1.0"
rand = "0.8.4"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"