[package]
name = "covid_tracing_dist"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.5"
hydroflow = { path = "../hydroflow" }
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
byteorder = "1.4.3"
bytes = "1.1.0"
rand = "0.8.4"
tokio-util = { version = "0.6.9", features = ["codec"] }