[package]
name = "datalog_compiler"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
quote = "1.0.0"
slotmap = "1.0.6"
syn = { version = "1.0.0", features = [ "parsing", "extra-traits" ] }
proc-macro2 = "1.0.27"
rust_sitter = { git = "https://github.com/hydro-project/rust-sitter" }
tree-sitter = "0.20.6"

[build-dependencies]
cc = "*"
tempdir = "0.3.7"
tree-sitter-cli = "0.20.6"
tree-sitter = "0.20.6"
rust_sitter_tool = { git = "https://github.com/hydro-project/rust-sitter" }

[dev-dependencies]
insta = "1.7.1"
tempfile = "3.2.0"
