[package]
name = "dfir_datalog"
publish = true
version = "0.11.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/dfir_datalog/"
repository = "https://github.com/hydro-project/hydro"
description = "Datalog proc-macro for DFIR"

[lints]
workspace = true

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.46", features = [ "parsing", "extra-traits" ] }
proc-macro2 = "1.0.74"
proc-macro-crate = "1.0.0"
# Note: If we ever compile this proc macro crate to WASM (e.g., if we are
# building on a WASM host), we may need to turn diagnostics off for WASM if
# proc_macro2 does not support WASM at that time.
dfir_datalog_core = { path = "../dfir_datalog_core", version = "^0.11.0" }
