[package]
name = "dfir_datalog_core"
publish = true
version = "0.11.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/dfir_datalog_core/"
repository = "https://github.com/hydro-project/hydro"
description = "Datalog implementation for DFIR"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
quote = "1.0.35"
slotmap = "1.0.0"
syn = { version = "2.0.46", features = [ "parsing", "extra-traits" ] }
proc-macro2 = "1.0.74"
rust-sitter = "0.4.3"
dfir_lang = { path = "../dfir_lang", version = "^0.11.0" }

[build-dependencies]
rust-sitter-tool = "0.4.3"

[dev-dependencies]
insta = "1.39"
prettyplease = { version = "0.2.0", features = [ "verbatim" ] }
tempfile = "3"
