[package]
name = "hydro_cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "hydro"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "hydro._core"

[dependencies]
tokio = { version = "1.16", features = [ "full" ] }
tokio-util = { version = "0.7.7", features=[ "compat" ] }
anyhow = { version = "1.0.69", features = [ "backtrace" ] }
clap = { version = "4.1.8", features = ["derive"] }
cargo = { version = "0.68.0", features = ["vendored-openssl", "vendored-libgit2"] }
pyo3 = { version = "0.18.1", features = ["abi3-py37"] }
pyo3-asyncio = { version = "0.18.0", features = ["attributes", "unstable-streams", "tokio-runtime"] }
async-trait = "0.1.64"
async-process = "1.6.0"
async-recursion = "1"
futures = "0.3.26"
futures-core = "0.3.26"
async-channel = "1.8.0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tempfile = "3.3.0"
async-ssh2-lite = { version = "0.4.2", features = [ "tokio", "vendored-openssl" ] }
hydroflow_cli_integration = { path = "../hydroflow_cli_integration" }

[dev-dependencies]
