[package]
name = "hydro_cli"
publish = true
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/hydro_cli/"
description = "Hydro Deploy Command Line Interface"

[lib]
name = "hydro"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.16", features = [ "full" ] }
tokio-util = { version = "0.7.7", features=[ "compat" ] }
once_cell = "1.17"
anyhow = { version = "1.0.69", features = [ "backtrace" ] }
clap = { version = "4.1.8", features = ["derive"] }
pyo3 = { version = "0.18", features = ["abi3-py37"] }
pyo3-asyncio = { version = "0.18", features = ["attributes", "tokio-runtime"] }
pythonize = "0.18"
async-trait = "0.1.64"
async-process = "1.6.0"
async-recursion = "1"
futures = "0.3.26"
futures-core = "0.3.26"
async-channel = "1.8.0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tempfile = "3.3.0"
async-ssh2-lite = { version = "0.4.2", features = [ "tokio", "vendored-openssl" ] }
shell-escape = "0.1.5"
dyn-clone = "1"
bytes = "1.1.0"
nanoid = "0.4.0"
ctrlc = "3.2.5"
nix = "0.26.2"
hydroflow_cli_integration = { path = "../hydroflow_cli_integration", version = "^0.2.0" }
indicatif = "0.17.3"
cargo_metadata = "0.15.4"

[dev-dependencies]
