[project]
name = "hydro-deploy"
authors = []
description = "A toolkit for deploying Hydro services to cloud platforms."
readme = "README.md"
dependencies = []
requires-python = ">=3.7"

[build-system]
requires = ["maturin>=1.0.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hydro._core"

[project.scripts]
hydro = "hydro.cli:cli"
