[package]
name = "hydro_cli_examples"
publish = false
version = "0.0.0"
edition = "2021"

[[example]]
name = "empty_program"

[[example]]
name = "stdout_receiver"

[[example]]
name = "tagged_stdout_receiver"

[[example]]
name = "dedalus_sender"

[[example]]
name = "dedalus_receiver"

[[example]]
name = "dedalus_vote_leader"

[[example]]
name = "dedalus_vote_participant"

[[example]]
name = "dedalus_echo_leader"

[[example]]
name = "dedalus_echo_participant"

[[example]]
name = "dedalus_auto_2pc_coordinator"

[[example]]
name = "dedalus_auto_2pc_vote_requester"

[[example]]
name = "dedalus_auto_2pc_participant_voter"

[[example]]
name = "dedalus_auto_2pc_committer"

[[example]]
name = "dedalus_auto_2pc_participant_acker"

[[example]]
name = "dedalus_auto_2pc_ender"

[[example]]
name = "dedalus_2pc_coordinator"

[[example]]
name = "dedalus_2pc_participant"

[[example]]
name = "dedalus_paxos_acceptor"

[[example]]
name = "dedalus_paxos_proposer"

[[example]]
name = "dedalus_auto_vote_leader"

[[example]]
name = "dedalus_auto_vote_participant"

[[example]]
name = "dedalus_auto_vote_collector"

[[example]]
name = "dedalus_auto_vote_broadcaster"

[[example]]
name = "dedalus_auto_paxos_acceptor"

[[example]]
name = "dedalus_auto_paxos_proposer"

[[example]]
name = "dedalus_auto_paxos_coordinator"

[[example]]
name = "dedalus_auto_paxos_p2a_proxy"

[[example]]
name = "dedalus_auto_paxos_p2b_proxy"

[[example]]
name = "dedalus_tick"

[[example]]
name = "topolotree"

[[example]]
name = "topolotree_latency_measure"

[[example]]
name = "pn_counter"

[[example]]
name = "pn_counter_delta"

[dev-dependencies]
hydroflow = { path = "../hydroflow", features = [ "cli_integration" ] }
hydroflow_datalog = { path = "../hydroflow_datalog" }

tokio = { version = "1.16", features = [ "full" ] }
serde = { version = "1", features = ["rc"] }
serde_json = "1"
rand = "0.8.5"
dashmap = "5.4.0"

futures = "0.3.28"

[target.'cfg(target_os = "linux")'.dev-dependencies]
procinfo = "0.4.2"
