[package]
name = "hydro_lang"
publish = true
version = "0.11.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/hydro_lang/"
repository = "https://github.com/hydro-project/hydro"
description = "Choreographic programming  for Hydro, built on DFIR"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
stageleft_devel = []
deploy = [ "build", "dep:hydro_deploy", "dep:trybuild-internals-api", "dep:toml", "dep:prettyplease", "dep:sha2", "dep:stageleft_tool", "dep:nameof" ]
build = [ "dep:dfir_lang" ]

[dependencies]
bincode = "1.3.1"
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.10.0", optional = true }
dfir_rs = { path = "../dfir_rs", version = "^0.11.0", default-features = false, features = ["deploy_integration"] }
dfir_lang = { path = "../dfir_lang", version = "^0.11.0", optional = true }
match_box = "0.0.2"
nameof = { version = "1.0.0", optional = true }
prettyplease = { version = "0.2.0", features = [ "verbatim" ], optional = true }
proc-macro-crate = "1.0.0"
proc-macro2 = "1.0.74"
quote = "1.0.35"
sealed = "0.6.0"
serde = { version = "1.0.197", features = [ "derive" ] }
sha2 = { version = "0.10.0", optional = true }
stageleft = { path = "../stageleft", version = "^0.5.0" }
stageleft_tool = { path = "../stageleft_tool", version = "^0.4.0", optional = true }
syn = { version = "2.0.46", features = [ "parsing", "extra-traits", "visit-mut" ] }
tokio = { version = "1.29.0", features = [ "full" ] }
toml = { version = "0.8.0", optional = true }
trybuild-internals-api = { version = "1.0.99", optional = true }

[build-dependencies]
stageleft_tool = { path = "../stageleft_tool", version = "^0.4.0" }

[dev-dependencies]
async-ssh2-lite = { version = "0.5.0", features = ["vendored-openssl"] }
ctor = "0.2.8"
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.10.0" }
insta = "1.39"
trybuild = "1"
