[package]
name = "hydro_test"
publish = false
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[features]
default = ["stageleft_devel"]
stageleft_devel = []

[dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.11.0" }
hydro_std = { path = "../hydro_std", version = "^0.11.0" }
tokio = { version = "1.29.0", features = [ "full" ] }
stageleft = { path = "../stageleft", version = "^0.6.0" }
rand = "0.8.0"
serde = { version = "1.0.197", features = [ "derive" ] }

[build-dependencies]
stageleft_tool = { path = "../stageleft_tool", version = "^0.5.0" }

[dev-dependencies]
insta = "1.39"
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.11.0" }
hydro_lang = { path = "../hydro_lang", version = "^0.11.0", features = [ "deploy" ] }
futures = "0.3.0"
async-ssh2-lite = { version = "0.5.0", features = ["vendored-openssl"] }
