[package]
name = "hydro_test_local"
publish = false
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[features]
stageleft_devel = []

[dependencies]
dfir_rs = { path = "../dfir_rs", version = "^0.11.0", default-features = false } # , features = ["debugging"] }
hydro_lang = { path = "../hydro_lang", version = "^0.11.0", features = ["build"] }
stageleft = { path = "../stageleft", version = "^0.6.0" }
rand = "0.8.0"

hydro_test_local_macro = { path = "../hydro_test_local_macro" }

[build-dependencies]
stageleft_tool = { path = "../stageleft_tool", version = "^0.5.0" }

[dev-dependencies]
insta = "1.39"
futures = "0.3.0"
