[package]
name = "hydro_test_local_macro"
publish = false
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[lib]
proc-macro = true
path = "../hydro_test_local/src/lib.rs"

[dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.11.0", features = ["build"] }
stageleft = { path = "../stageleft", version = "^0.6.0" }
rand = "0.8.0"

[build-dependencies]
stageleft_tool = { path = "../stageleft_tool", version = "^0.5.0" }
