[package]
name = "hydroflow_datalog"
publish = true
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/hydroflow_datalog/"
description = "Datalog proc-macro for Hydroflow"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
quote = "1.0.0"
syn = { version = "2.0.0", features = [ "parsing", "extra-traits" ] }
proc-macro2 = "1.0.27"
proc-macro-crate = "1.1.0"
# Note: If we ever compile this proc macro crate to WASM (e.g., if we are
# building on a WASM host), we may need to turn diagnostics off for WASM if
# proc_macro2 does not support WASM at that time.
hydroflow_datalog_core = { path = "../hydroflow_datalog_core", features = [ "diagnostics" ], version = "^0.0.1" }
